# rustapi

./: Cargo.toml  README.md
src/: database.rs  errors.rs  settings.rs
src/lib/: models.rs
src/models/: cat.rs
